Fix logo splitting onto multiple lines on smaller mobile displays

--- a/src/App.css
+++ b/src/App.css
@@ -54,7 +54,7 @@ hr{
     .Logo{
         position: relative;
         top: 10px;
-        font-size: 130%;
+        font-size: 120%;
     }
     .NavButton{
         position: relative;
